# ainbox-infrastructure

./: LICENSE  Makefile  README.md  TASKS.md  build-cpu.sh  build.sh  docker-compose.yml  pyproject.toml
deploy/: cpu_min.json  example.json  rtx4060_gpu-small.json  rtx4060_gpu.json  rtx4060_hybrid.json  smaug_gpu.json  vps_minimal.json
docs/: 2026-07-02-ainbox-infrastructure-design.md  2026-07-02-ainbox-infrastructure-embeddings-plan.md  2026-07-02-ainbox-infrastructure-gateway-plan.md  2026-07-02-ainbox-infrastructure-images-plan.md  2026-07-02-ainbox-infrastructure-stt-plan.md  2026-07-02-ainbox-infrastructure-tts-plan.md  2026-07-02-ainbox-infrastructure-ui-plan.md  2026-07-03-builder-ui-design.md  2026-07-03-builder-ui-plan.md  smoke-gateway.md
recipes/: cpu_min.json  rtx4060_v1.json  smaug_v1.json  vps_cpu_test.json  vps_light_test.json
scripts/: build_ui.py  demo_ui.py
src/ainbox_builder/: app.py  builder.py  catalog.py  recipe.py
src/ainbox_builder/static/: build.html
src/ainbox_gateway/: __main__.py  app.py  embeddings.py  images.py  pool.py  router.py  spec.py  stt.py  supervisor.py  tts.py
src/ainbox_gateway/static/: ui.html
src/ainbox_gateway/static/syalia-ui/: resize.js  syalia-tailwind-bridge.css  syalia-ui.css
tests/: test_app.py  test_builder_app.py  test_builder_command.py  test_builder_disk.py  test_builder_recipe.py  test_builder_runner.py  test_embeddings.py  test_images.py  test_import.py  test_pool.py  test_router.py  test_spec.py  test_stt.py  test_supervisor.py  test_tts.py
