[project]
name = "ainbox-gateway"
version = "0.1.0"
description = "Pure-OpenAI gateway for the AI-n-Box inference engine"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "asgi-lifespan>=2.1"]
gpu = ["fastembed-gpu>=0.3", "faster-whisper>=1.0.1"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
